WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263665
Fix crash when sending RemoteImageBuffer::GetShareableBitmap fails
https://bugs.webkit.org/show_bug.cgi?id=263665
Summary
Fix crash when sending RemoteImageBuffer::GetShareableBitmap fails
Alex Christensen
Reported
2023-10-25 09:44:58 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-25 09:45:10 PDT
<
rdar://problem/117480606
>
Alex Christensen
Comment 2
2023-10-25 09:46:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19545
EWS
Comment 3
2023-10-25 11:10:48 PDT
Committed
269770@main
(4c147ec5b66d): <
https://commits.webkit.org/269770@main
> Reviewed commits have been landed. Closing PR #19545 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug