Fix crash when sending RemoteImageBuffer::GetShareableBitmap fails https://bugs.webkit.org/show_bug.cgi?id=263665 rdar://117480606

Reviewed by Kimmo Kinnunen.

This fixes a crash I saw locally one time.  Others have probably hit it.
I audited all uses of takeReply() and found this is the only one that had the issue.
We should probably migrate to WTF::Expected instead for a better syntactic hint that
a check is needed.

* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
(WebKit::RemoteRenderingBackendProxy::getShareableBitmap):

Canonical link: https://commits.webkit.org/269770@main